fixed an issue where scaled up items were  getting clipped

--- a/src/pages/GridPage.css
+++ b/src/pages/GridPage.css
@@ -6,6 +6,7 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 0.5rem;
   overflow: hidden;
+  padding: 5px;
 }
 
 .grid-page-container > * {
@@ -23,7 +24,7 @@
 
 @keyframes top-slide-in {
   from {
-    transform: translateY(-100%);
+    transform: translateY(-105%);
   }
   to {
     transform: translateY(0%);
@@ -34,7 +35,7 @@
   grid-row: 1 / 3;
   grid-column: 1 / 3;
   padding: 2rem;
-  transform: translateY(-100%);
+  transform: translateY(-105%);
   animation: top-slide-in 0.5s ease forwards;
   animation-delay: 0.5s;
 }
@@ -50,7 +51,7 @@
 
 @keyframes right-slide-in {
   from {
-    transform: translateX(100%);
+    transform: translateX(105%);
   }
   to {
     transform: translateX(0%);
@@ -61,7 +62,7 @@
   grid-row: 1 / 4;
   grid-column: 3 / 4;
   padding: 0;
-  filter: grayscale(100%);
+  filter: grayscale(105%);
   background-color: transparent;
 }
 
@@ -75,14 +76,14 @@
   background-image: url("./../assets/two.png");
   background-position: center;
   background-size: cover;
-  transform: translateX(100%);
+  transform: translateX(105%);
   animation: right-slide-in 0.5s ease forwards;
   animation-delay: 0.5s;
 }
 
 @keyframes left-slide-in {
   from {
-    transform: translateX(-100%);
+    transform: translateX(-105%);
   }
   to {
     transform: translateX(0%);
@@ -96,7 +97,7 @@
   text-align: center;
   font-weight: 600;
   font-size: 1.3rem;
-  transform: translateX(-100%);
+  transform: translateX(-105%);
   animation: left-slide-in 0.5s ease forwards;
 }
 
@@ -161,7 +162,7 @@
   display: grid;
   place-items: center;
   font-weight: 600;
-  transform: translateX(100%);
+  transform: translateX(105%);
   animation: right-slide-in 0.5s ease forwards;
   animation-delay: 0.7s;
 }
@@ -170,7 +171,7 @@
   grid-row: 4 / 8;
   grid-column: 1 / 2;
   padding: 1rem;
-  transform: translateY(100%);
+  transform: translateY(105%);
   animation: down-slide-in 0.5s ease forwards;
   animation-delay: 0.6s;
 }
@@ -189,7 +190,7 @@
 
 @keyframes down-slide-in {
   from {
-    transform: translateY(100%);
+    transform: translateY(105%);
   }
   to {
     transform: translateY(0%);
@@ -199,7 +200,7 @@
 .grid-page-container .education {
   grid-row: 5 / 8;
   grid-column: 2 / 4;
-  transform: translateY(100%);
+  transform: translateY(105%);
   animation: down-slide-in 0.5s ease forwards;
   animation-delay: 0.1s;
 }
